# python-microservice

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  keycloak-init.sh  pyproject.toml  request.http  token.http  wait-for-keycloak.sh
app/api/v1/: sample_resource.py
app/conf/: config.py
app/security/: keycloak_auth.py
tests/: conftest.py
